@@ -6,7 +6,7 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.MvcResult;
 import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilder;
@@ -31,6 +31,7 @@ import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
@@ -60,7 +61,7 @@ class AudioRequestsControllerAddAudioRequestDownloadIntTest extends IntegrationB
     @Autowired
     private MockMvc mockMvc;
 
-    @MockBean
+    @MockitoBean
     private UserIdentity mockUserIdentity;
 
     private HearingEntity hearingEntity;
@@ -100,12 +101,12 @@ class AudioRequestsControllerAddAudioRequestDownloadIntTest extends IntegrationB
     }
 
     @Test
-    void addAudioRequestPostShouldReturnForbiddenErrorForRcjAppealUser() throws Exception {
+    void addAudioRequestPost_shouldReturnOk_whenRcjAppealUser() throws Exception {
 
-        testUser = dartsDatabase.getUserAccountStub()
-            .createRcjAppealUser(hearingEntity.getCourtroom().getCourthouse());
+        testUser = dartsDatabase.getUserAccountStub().createRcjAppealUser();
 
         when(mockUserIdentity.getUserAccount()).thenReturn(testUser);
+        when(mockUserIdentity.userHasGlobalAccess(any())).thenReturn(true);
 
         var audioRequestDetails = createAudioRequestDetails(hearingEntity);
 
@@ -113,7 +114,7 @@ class AudioRequestsControllerAddAudioRequestDownloadIntTest extends IntegrationB
             .header("Content-Type", "application/json")
             .content(objectMapper.writeValueAsString(audioRequestDetails));
 
-        mockMvc.perform(requestBuilder).andExpect(status().isForbidden());
+        mockMvc.perform(requestBuilder).andExpect(status().isOk());
     }
 
     @Test
@@ -156,15 +157,15 @@ class AudioRequestsControllerAddAudioRequestDownloadIntTest extends IntegrationB
         assertEquals(1, notifications.size());
         assertEquals(
             NotificationApi.NotificationTemplate.AUDIO_REQUEST_PROCESSING.toString(),
-            notifications.get(0).getEventId()
+            notifications.getFirst().getEventId()
         );
         assertEquals(
             dartsDatabase.getUserAccountStub().getIntegrationTestUserAccountEntity().getEmailAddress(),
-            notifications.get(0).getEmailAddress()
+            notifications.getFirst().getEmailAddress()
         );
         assertEquals(
             mediaRequestEntity.getHearing().getCourtCase().getCaseNumber(),
-            notifications.get(0).getCourtCase().getCaseNumber()
+            notifications.getFirst().getCourtCase().getCaseNumber()
         );
 
         assertEquals(1, dartsDatabase.getAuditRepository().findAll().size());
