@@ -1,6 +1,5 @@
 package uk.gov.hmcts.darts.dailylist.service;
 
-import ch.qos.logback.classic.Level;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
 import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
@@ -12,6 +11,7 @@ import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.test.context.bean.override.mockito.MockitoSpyBean;
 import uk.gov.hmcts.darts.common.entity.CourtCaseEntity;
 import uk.gov.hmcts.darts.common.entity.CourthouseEntity;
 import uk.gov.hmcts.darts.common.entity.DailyListEntity;
@@ -23,8 +23,10 @@ import uk.gov.hmcts.darts.common.repository.UserAccountRepository;
 import uk.gov.hmcts.darts.dailylist.enums.JobStatusType;
 import uk.gov.hmcts.darts.dailylist.enums.SourceType;
 import uk.gov.hmcts.darts.dailylist.service.impl.ProcessDailyListOnDemandTask;
+import uk.gov.hmcts.darts.log.api.impl.LogApiImpl;
 import uk.gov.hmcts.darts.log.util.DailyListLogJobReport;
 import uk.gov.hmcts.darts.task.api.AutomatedTasksApi;
+import uk.gov.hmcts.darts.task.runner.IsNamedEntity;
 import uk.gov.hmcts.darts.test.common.TestUtils;
 import uk.gov.hmcts.darts.test.common.data.DailyListTestData;
 import uk.gov.hmcts.darts.testutils.IntegrationBase;
@@ -38,7 +40,7 @@ import java.util.List;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.mockito.Mockito.verify;
 import static uk.gov.hmcts.darts.dailylist.enums.JobStatusType.FAILED;
 import static uk.gov.hmcts.darts.dailylist.enums.JobStatusType.IGNORED;
 import static uk.gov.hmcts.darts.dailylist.enums.JobStatusType.PARTIALLY_PROCESSED;
@@ -81,6 +83,9 @@ class DailyListProcessorTest extends IntegrationBase {
     @Autowired
     private AutomatedTasksApi automatedTasksApi;
 
+    @MockitoSpyBean
+    private LogApiImpl logApi;
+
     @BeforeAll
     static void beforeAll() {
         MAPPER.registerModule(new JavaTimeModule());
@@ -95,6 +100,43 @@ class DailyListProcessorTest extends IntegrationBase {
     @AfterEach
     void closeHibernateSession() {
         openInViewUtil.closeEntityManager();
+    }
+
+
+    @Test
+    void dailyListProcessor_missingForename_shouldStillCreateUsers() throws IOException {
+        CourthouseEntity swanseaCourtEntity = dartsDatabase.createCourthouseWithTwoCourtrooms();
+        LocalTime dailyListTIme = LocalTime.of(13, 0);
+        DailyListEntity dailyListEntity = DailyListTestData.createDailyList(
+            dailyListTIme,
+            String.valueOf(SourceType.CPP),
+            swanseaCourtEntity.getCourthouseName(),
+            "tests/dailyListProcessorTest/dailyListMissingForename.json"
+        );
+
+        dartsDatabase.save(dailyListEntity);
+
+        dailyListProcessor.processAllDailyLists();
+
+        CourtCaseEntity newCase1 = caseRepository.findByCaseNumberAndCourthouse_CourthouseName(URN_1, SWANSEA).get();
+        assertEquals(URN_1, newCase1.getCaseNumber());
+        assertEquals(SWANSEA, newCase1.getCourthouse().getCourthouseName());
+        assertEquals(1, newCase1.getDefendantList().size());
+        assertNameEquals(newCase1.getDefendantList().getFirst(), "DefendantName CPP");
+        assertEquals(1, newCase1.getDefenceList().size());
+        assertNameEquals(newCase1.getDefenceList().getFirst(), "DefenceName CPP");
+        assertEquals(1, newCase1.getProsecutorList().size());
+        assertNameEquals(newCase1.getProsecutorList().getFirst(), "ProsecutorName CPP");
+
+        HearingEntity newHearing1 = hearingRepository.findByCourthouseCourtroomAndDate(SWANSEA, COURTROOM_1, LocalDate.now()).getFirst();
+        assertEquals(LocalDate.now(), newHearing1.getHearingDate());
+        assertEquals(COURTROOM_1, newHearing1.getCourtroom().getName());
+        assertEquals(1, newHearing1.getJudges().size());
+        assertEquals(LocalTime.of(11, 0), newHearing1.getScheduledStartTime());
+    }
+
+    private void assertNameEquals(IsNamedEntity first, String expected) {
+        Assertions.assertThat(first.getName()).isEqualTo(expected);
     }
 
 
@@ -132,7 +174,7 @@ class DailyListProcessorTest extends IntegrationBase {
         assertEquals(1, countOfProcessed);
         long countOfIgnored = dailyListStatuses.stream().filter(status -> status.equals(IGNORED)).count();
         assertEquals(1, countOfIgnored);
-        assertFalse(logAppender.searchLogApiLogs(report.toString(), Level.toLevel(Level.INFO_INT)).isEmpty());
+        verify(logApi).processedDailyListJob(report);
 
         CourtCaseEntity newCase1 = caseRepository.findByCaseNumberAndCourthouse_CourthouseName(URN_1, SWANSEA).get();
         assertEquals(URN_1, newCase1.getCaseNumber());
@@ -142,7 +184,7 @@ class DailyListProcessorTest extends IntegrationBase {
         assertEquals(1, newCase1.getProsecutorList().size());
         assertEquals(1, newCase1.getJudges().size());
 
-        HearingEntity newHearing1 = hearingRepository.findByCourthouseCourtroomAndDate(SWANSEA, COURTROOM_1, LocalDate.now()).get(0);
+        HearingEntity newHearing1 = hearingRepository.findByCourthouseCourtroomAndDate(SWANSEA, COURTROOM_1, LocalDate.now()).getFirst();
         assertEquals(LocalDate.now(), newHearing1.getHearingDate());
         assertEquals(COURTROOM_1, newHearing1.getCourtroom().getName());
         assertEquals(1, newHearing1.getJudges().size());
@@ -158,10 +200,10 @@ class DailyListProcessorTest extends IntegrationBase {
 
         List<HearingEntity> newHearing2 = hearingRepository.findByCourthouseCourtroomAndDate(SWANSEA, COURTROOM_2, LocalDate.now());
         assertEquals(1, newHearing2.size());
-        assertEquals(LocalDate.now(), newHearing2.get(0).getHearingDate());
-        assertEquals(COURTROOM_2, newHearing2.get(0).getCourtroom().getName());
-        assertEquals(1, newHearing2.get(0).getJudges().size());
-        assertEquals(LocalTime.of(16, 0), newHearing2.get(0).getScheduledStartTime());
+        assertEquals(LocalDate.now(), newHearing2.getFirst().getHearingDate());
+        assertEquals(COURTROOM_2, newHearing2.getFirst().getCourtroom().getName());
+        assertEquals(1, newHearing2.getFirst().getJudges().size());
+        assertEquals(LocalTime.of(16, 0), newHearing2.getFirst().getScheduledStartTime());
         log.info("end dailyListProcessorMultipleDailyList");
     }
 
@@ -278,8 +320,7 @@ class DailyListProcessorTest extends IntegrationBase {
         DailyListLogJobReport report = new DailyListLogJobReport(2, SourceType.CPP);
         report.registerResult(PROCESSED);
         report.registerResult(IGNORED);
-
-        assertEquals(1, logAppender.searchLogApiLogs(report.toString(), Level.toLevel(Level.INFO_INT)).size());
+        verify(logApi).processedDailyListJob(report);
 
         CourtCaseEntity newCase1 = caseRepository.findByCaseNumberAndCourthouse_CourthouseName(URN_1, SWANSEA).get();
         assertEquals(URN_1, newCase1.getCaseNumber());
@@ -289,7 +330,7 @@ class DailyListProcessorTest extends IntegrationBase {
         assertEquals(1, newCase1.getProsecutorList().size());
         assertEquals(1, newCase1.getJudges().size());
 
-        HearingEntity newHearing1 = hearingRepository.findByCourthouseCourtroomAndDate(SWANSEA, COURTROOM_1, LocalDate.now()).get(0);
+        HearingEntity newHearing1 = hearingRepository.findByCourthouseCourtroomAndDate(SWANSEA, COURTROOM_1, LocalDate.now()).getFirst();
         assertEquals(LocalDate.now(), newHearing1.getHearingDate());
         assertEquals(COURTROOM_1, newHearing1.getCourtroom().getName());
         assertEquals(1, newHearing1.getJudges().size());
@@ -306,10 +347,10 @@ class DailyListProcessorTest extends IntegrationBase {
 
         List<HearingEntity> newHearing2 = hearingRepository.findByCourthouseCourtroomAndDate(SWANSEA, COURTROOM_2, LocalDate.now());
         assertEquals(1, newHearing2.size());
-        assertEquals(LocalDate.now(), newHearing2.get(0).getHearingDate());
-        assertEquals(COURTROOM_2, newHearing2.get(0).getCourtroom().getName());
-        assertEquals(1, newHearing2.get(0).getJudges().size());
-        assertEquals(LocalTime.of(16, 0), newHearing2.get(0).getScheduledStartTime());
+        assertEquals(LocalDate.now(), newHearing2.getFirst().getHearingDate());
+        assertEquals(COURTROOM_2, newHearing2.getFirst().getCourtroom().getName());
+        assertEquals(1, newHearing2.getFirst().getJudges().size());
+        assertEquals(LocalTime.of(16, 0), newHearing2.getFirst().getScheduledStartTime());
         log.info("end dailyListProcessorMultipleDailyList");
 
     }
@@ -330,9 +371,8 @@ class DailyListProcessorTest extends IntegrationBase {
 
         CourtCaseEntity newCase1 = caseRepository
             .findByCaseNumberAndCourthouse_CourthouseName(URN_1, SWANSEA).get();
-
-        assertEquals(1, logAppender.searchLogApiLogs(reportCpp.toString(), Level.toLevel(Level.INFO_INT)).size());
-        assertEquals(1, logAppender.searchLogApiLogs(reportXhb.toString(), Level.toLevel(Level.INFO_INT)).size());
+        verify(logApi).processedDailyListJob(reportCpp);
+        verify(logApi).processedDailyListJob(reportXhb);
 
         assertEquals(URN_1, newCase1.getCaseNumber());
 
@@ -400,7 +440,7 @@ class DailyListProcessorTest extends IntegrationBase {
 
         DailyListLogJobReport report = new DailyListLogJobReport(1, SourceType.CPP);
         report.registerResult(FAILED);
-        assertEquals(1, logAppender.searchLogApiLogs(report.toString(), Level.toLevel(Level.INFO_INT)).size());
+        verify(logApi).processedDailyListJob(report);
 
         var dailyListStatus = dartsDatabase.getDailyListRepository()
             .findById(id).orElseThrow()
@@ -432,7 +472,7 @@ class DailyListProcessorTest extends IntegrationBase {
         report.registerResult(PARTIALLY_PROCESSED);
         report.registerResult(IGNORED);
 
-        assertEquals(1, logAppender.searchLogApiLogs(report.toString(), Level.toLevel(Level.INFO_INT)).size());
+        verify(logApi).processedDailyListJob(report);
 
         var dailyListStatus = dartsDatabase.getDailyListRepository()
             .findById(oldDailyList.getId()).orElseThrow()
