@@ -41,8 +41,8 @@ public class AudioOperationServiceImpl implements AudioOperationService {
             command.append(" -i ").append(audioFileInfo.getPath().toString());
         }
 
-        command.append(" -b:a 32k");
-        command.append(" -filter_complex ");
+        command.append(" -b:a 32k")
+            .append(" -filter_complex ");
 
         int concatNumberOfSegments = audioFileInfos.size();
         StringBuilder inputFileAudioStreams = new StringBuilder();
@@ -291,7 +291,7 @@ public class AudioOperationServiceImpl implements AudioOperationService {
         List<AudioFileInfo> sessionAudio = new ArrayList<>();
         AudioFileInfo previousAudio;
         AudioFileInfo thisAudio;
-        sessionAudio.add(audioFileInfoList.get(0));
+        sessionAudio.add(audioFileInfoList.getFirst());
 
         for (int counter = 1; counter < audioFileInfoList.size(); counter++) {
             previousAudio = audioFileInfoList.get(counter - 1);
