@@ -22,7 +22,6 @@ import uk.gov.hmcts.darts.common.entity.ProsecutorEntity;
 import uk.gov.hmcts.darts.common.entity.UserAccountEntity;
 import uk.gov.hmcts.darts.common.enums.ExternalLocationTypeEnum;
 import uk.gov.hmcts.darts.common.enums.SystemUsersEnum;
-import uk.gov.hmcts.darts.common.enums.SystemUsersEnum;
 import uk.gov.hmcts.darts.common.helper.CurrentTimeHelper;
 import uk.gov.hmcts.darts.common.helper.SystemUserHelper;
 import uk.gov.hmcts.darts.common.repository.CourthouseRepository;
@@ -39,7 +38,6 @@ import uk.gov.hmcts.darts.dailylist.model.Defendant;
 import uk.gov.hmcts.darts.dailylist.model.Hearing;
 import uk.gov.hmcts.darts.dailylist.model.PersonalDetails;
 import uk.gov.hmcts.darts.dailylist.model.Sitting;
-import uk.gov.hmcts.darts.dailylist.util.CitizenNameComparator;
 import uk.gov.hmcts.darts.dets.service.DetsApiService;
 import uk.gov.hmcts.darts.task.runner.dailylist.mapper.DailyListRequestMapper;
 import uk.gov.hmcts.darts.task.runner.dailylist.schemas.courtservice.DailyListStructure;
@@ -79,7 +77,6 @@ class DailyListUpdater {
     private final SystemUserHelper systemUserHelper;
     private final CurrentTimeHelper currentTimeHelper;
     private final CitizenNameMapper citizenNameMapper;
-    private final CitizenNameComparator citizenNameComparator;
     private final DetsApiService detsApiService;
 
     private final XmlParser xmlParser;
@@ -95,9 +92,8 @@ class DailyListUpdater {
             DailyListJsonObject dailyList = objectMapper.readValue(dailyListEntity.getContent(), DailyListJsonObject.class);
             for (CourtList courtList : dailyList.getCourtLists()) {
 
-                String courtHouseName = courtList.getCourtHouse().getCourtHouseName().toUpperCase(Locale.ROOT);
-                Optional<CourthouseEntity> foundCourthouse = courthouseRepository.findByCourthouseName(
-                    courtHouseName);
+                String courtHouseNameUpperTrimmed = StringUtils.toRootUpperCase(StringUtils.trimToEmpty(courtList.getCourtHouse().getCourtHouseName()));
+                Optional<CourthouseEntity> foundCourthouse = courthouseRepository.findByCourthouseName(courtHouseNameUpperTrimmed);
 
                 if (foundCourthouse.isPresent()) {
                     List<Sitting> sittings = courtList.getSittings();
@@ -115,7 +111,7 @@ class DailyListUpdater {
                             LocalDateTime hearingDateTime = dailyListHearing.getHearingDetails().getHearingDate().atTime(scheduledStartTime);
 
                             HearingEntity hearing = retrieveCoreObjectService.retrieveOrCreateHearing(
-                                courtHouseName, sitting.getCourtRoomNumber(),
+                                courtHouseNameUpperTrimmed, sitting.getCourtRoomNumber(),
                                 caseNumber, hearingDateTime,
                                 dailyListSystemUser
                             );
@@ -134,7 +130,7 @@ class DailyListUpdater {
                 } else {
                     statusType = JobStatusType.PARTIALLY_PROCESSED;
                     log.error("Unregistered courthouse {} daily list entry with id {} has not been processed",
-                              courtHouseName, dailyListEntity.getId());
+                              courtHouseNameUpperTrimmed, dailyListEntity.getId());
                 }
             }
         }
@@ -260,7 +256,7 @@ class DailyListUpdater {
             if (hearing.getDefendants().isEmpty()) {
                 return hearing.getCaseNumber();
             } else {
-                String urn = hearing.getDefendants().get(0).getUrn();
+                String urn = hearing.getDefendants().getFirst().getUrn();
                 if (StringUtils.isBlank(urn)) {
                     log.warn("Case number not found for hearing: daily_list_id={}, hearing_date={}",
                              dailyListEntity.getId(), hearing.getHearingDetails().getHearingDate());
@@ -328,7 +324,7 @@ class DailyListUpdater {
     private boolean isExistingDefenders(CourtCaseEntity courtCase, PersonalDetails defenders) {
         boolean existingDefendant = false;
         for (DefenceEntity defenceEntity : courtCase.getDefenceList()) {
-            if (isEqual(defenders.getName(), citizenNameMapper.getCitizenName(defenceEntity.getName()))) {
+            if (citizenNameMapper.getCitizenName(defenders.getName()).equalsIgnoreCase(defenceEntity.getName())) {
                 existingDefendant = true;
             }
         }
@@ -339,7 +335,7 @@ class DailyListUpdater {
     private boolean isExistingDefendant(CourtCaseEntity courtCase, Defendant defendant) {
         boolean existingDefendant = false;
         for (DefendantEntity defendantEntity : courtCase.getDefendantList()) {
-            if (isEqual(defendant.getPersonalDetails().getName(), citizenNameMapper.getCitizenName(defendantEntity.getName()))) {
+            if (citizenNameMapper.getCitizenName(defendant.getPersonalDetails().getName()).equalsIgnoreCase(defendantEntity.getName())) {
                 existingDefendant = true;
             }
         }
@@ -351,16 +347,12 @@ class DailyListUpdater {
         boolean existingDefendant = false;
         for (ProsecutorEntity prosecutorEntity : courtCase.getProsecutorList()) {
 
-            if (isEqual(prosecutor.getName(), citizenNameMapper.getCitizenName(prosecutorEntity.getName()))) {
+            if (citizenNameMapper.getCitizenName(prosecutor.getName()).equalsIgnoreCase(prosecutorEntity.getName())) {
                 existingDefendant = true;
             }
         }
 
         return existingDefendant;
-    }
-
-    private boolean isEqual(CitizenName name1, CitizenName name2) {
-        return citizenNameComparator.compare(name1, name2) == 0;
     }
 
     /**
