@@ -1,14 +1,15 @@
 package uk.gov.hmcts.darts.common.datamanagement.api;
 
 import com.azure.core.util.BinaryData;
-import com.azure.storage.blob.BlobClient;
 import lombok.SneakyThrows;
+import lombok.extern.slf4j.Slf4j;
 import org.jetbrains.annotations.NotNull;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.api.io.TempDir;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
@@ -35,40 +36,52 @@ import uk.gov.hmcts.darts.common.repository.ExternalObjectDirectoryRepository;
 import uk.gov.hmcts.darts.common.repository.ObjectRecordStatusRepository;
 import uk.gov.hmcts.darts.common.repository.ObjectRetrievalQueueRepository;
 import uk.gov.hmcts.darts.common.repository.UserAccountRepository;
-import uk.gov.hmcts.darts.datamanagement.api.DataManagementApi;
 import uk.gov.hmcts.darts.datamanagement.config.DataManagementConfiguration;
 import uk.gov.hmcts.darts.datamanagement.exception.FileNotDownloadedException;
 import uk.gov.hmcts.darts.datamanagement.model.BlobClientUploadResponseImpl;
 import uk.gov.hmcts.darts.datamanagement.service.DataManagementService;
 import uk.gov.hmcts.darts.test.common.FileStore;
 
+import java.io.ByteArrayInputStream;
 import java.io.File;
+import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.stream.Stream;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.apache.commons.io.IOUtils.toInputStream;
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.doNothing;
 import static org.mockito.Mockito.lenient;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.spy;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 @ExtendWith({MockitoExtension.class})
+@Slf4j
 class DataManagementFacadeImplTest {
+
+    private static final String SOME_TEMP_WORKSPACE = "some/temp/workspace";
+    private static final String DOWNLOAD_RESPONSE_META_DATA = "DownloadResponseMetaData: {}";
 
     @Mock
     private ExternalObjectDirectoryRepository externalObjectDirectoryRepository;
@@ -81,8 +94,6 @@ class DataManagementFacadeImplTest {
     @Mock
     private UnstructuredDataHelper unstructuredDataHelper;
     @Mock
-    private DataManagementApi dataManagementApi;
-    @Mock
     private DataManagementService dataManagementService;
     @Mock
     private DataManagementConfiguration dataManagementConfiguration;
@@ -92,8 +103,6 @@ class DataManagementFacadeImplTest {
     private ArmApiServiceImpl armApiService;
     @Mock
     private ObjectRetrievalQueueRepository objectRetrievalQueueRepository;
-    @Mock
-    private BlobClient blobClient;
     @Mock
     private DownloadResponseMetaData downloadResponseMetaDataMock;
     @Mock
@@ -160,7 +169,9 @@ class DataManagementFacadeImplTest {
 
         FileStore.getFileStore().remove();
 
-        assertEquals(0, Files.list(tempDirectory.toPath()).count());
+        try (Stream<Path> files = Files.list(tempDirectory.toPath())) {
+            assertEquals(0, files.count());
+        }
     }
 
     @Test
@@ -175,7 +186,7 @@ class DataManagementFacadeImplTest {
 
         ExternalObjectDirectoryEntity arm = createEodEntity(armLocationEntity);
 
-        List<ExternalObjectDirectoryEntity> entitiesToDownload = Arrays.asList(arm);
+        List<ExternalObjectDirectoryEntity> entitiesToDownload = List.of(arm);
 
         UnstructuredDataHelper unstructuredDataHelperTest = getUnstructuredDataHelper();
 
@@ -187,8 +198,8 @@ class DataManagementFacadeImplTest {
                                                                                dataManagementConfiguration, armApiService, objectRetrievalQueueRepository);
 
         // make the assertion on the response
-        try (DownloadResponseMetaData downloadResponseMetaData = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
-            assertEquals(DatastoreContainerType.ARM, downloadResponseMetaData.getContainerTypeUsedToDownload());
+        try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
+            assertEquals(DatastoreContainerType.ARM, downloadResponseMetaDataAutoClose.getContainerTypeUsedToDownload());
         }
     }
 
@@ -203,7 +214,7 @@ class DataManagementFacadeImplTest {
 
         ExternalObjectDirectoryEntity dets = createEodEntity(unstructuredLocationEntity);
 
-        List<ExternalObjectDirectoryEntity> entitiesToDownload = Arrays.asList(dets);
+        List<ExternalObjectDirectoryEntity> entitiesToDownload = List.of(dets);
 
         // execute the code
         final DataManagementFacadeImpl dmFacade = new DataManagementFacadeImpl(blobContainerDownloadables, externalObjectDirectoryRepository,
@@ -211,13 +222,13 @@ class DataManagementFacadeImplTest {
                                                                                dataManagementConfiguration, armApiService, objectRetrievalQueueRepository);
 
         // make the assertion on the response
-        try (DownloadResponseMetaData downloadResponseMetaData = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
-            assertEquals(DatastoreContainerType.UNSTRUCTURED, downloadResponseMetaData.getContainerTypeUsedToDownload());
+        try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
+            assertEquals(DatastoreContainerType.UNSTRUCTURED, downloadResponseMetaDataAutoClose.getContainerTypeUsedToDownload());
         }
     }
 
     @Test
-    void testThrowErrorNoStoredEodEntities() throws Exception {
+    void testThrowErrorNoStoredEodEntities() {
         final List<BlobContainerDownloadable> blobContainerDownloadables = new ArrayList<>();
 
         BlobContainerDownloadable downloadable = mock(BlobContainerDownloadable.class);
@@ -226,7 +237,7 @@ class DataManagementFacadeImplTest {
         ExternalObjectDirectoryEntity dets = createEodEntity(unstructuredLocationEntity);
         dets.getStatus().setId(ObjectRecordStatusEnum.FAILURE.getId());
 
-        List<ExternalObjectDirectoryEntity> entitiesToDownload = Arrays.asList(dets);
+        List<ExternalObjectDirectoryEntity> entitiesToDownload = List.of(dets);
 
         // execute the code
         final DataManagementFacadeImpl dmFacade = new DataManagementFacadeImpl(blobContainerDownloadables, externalObjectDirectoryRepository,
@@ -236,7 +247,12 @@ class DataManagementFacadeImplTest {
         // make the assertion on the response
         var exception = assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(entitiesToDownload)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
 
         assertTrue(exception.getMessage().contains("Supplied list of EodEntities does not have any that are stored"));
@@ -253,7 +269,7 @@ class DataManagementFacadeImplTest {
 
         ExternalObjectDirectoryEntity dets = createEodEntity(detsLocationEntity);
 
-        List<ExternalObjectDirectoryEntity> entitiesToDownload = Arrays.asList(dets);
+        List<ExternalObjectDirectoryEntity> entitiesToDownload = List.of(dets);
 
         // execute the code
         final DataManagementFacadeImpl dmFacade = new DataManagementFacadeImpl(blobContainerDownloadables, externalObjectDirectoryRepository,
@@ -261,8 +277,8 @@ class DataManagementFacadeImplTest {
                                                                                dataManagementConfiguration, armApiService, objectRetrievalQueueRepository);
 
         // make the assertion on the response
-        try (DownloadResponseMetaData downloadResponseMetaData = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
-            assertEquals(DatastoreContainerType.DETS, downloadResponseMetaData.getContainerTypeUsedToDownload());
+        try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
+            assertEquals(DatastoreContainerType.DETS, downloadResponseMetaDataAutoClose.getContainerTypeUsedToDownload());
         }
     }
 
@@ -278,7 +294,7 @@ class DataManagementFacadeImplTest {
         // create the payload to be tested
         ExternalObjectDirectoryEntity inboundEntity = createEodEntity(inboundLocationEntity);
 
-        List<ExternalObjectDirectoryEntity> entitiesToDownload = Arrays.asList(inboundEntity);
+        List<ExternalObjectDirectoryEntity> entitiesToDownload = List.of(inboundEntity);
 
         // execute the code
         final DataManagementFacadeImpl dmFacade = new DataManagementFacadeImpl(blobContainerDownloadables, externalObjectDirectoryRepository,
@@ -288,7 +304,12 @@ class DataManagementFacadeImplTest {
         // make the assertion on the response
         var exception = assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(entitiesToDownload)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
 
         assertTrue(exception.getMessage().contains("matching eodEntity not found for ARM"));
@@ -316,7 +337,12 @@ class DataManagementFacadeImplTest {
         // make the assertion on the response
         var exception = assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(entitiesToDownload)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
 
         assertTrue(exception.getMessage().contains("checking container ARM"));
@@ -337,7 +363,12 @@ class DataManagementFacadeImplTest {
         // make the assertion on the response
         var exception = assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(entitiesToDownload)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(entitiesToDownload)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
 
         assertTrue(exception.getMessage().contains("Supplied list of EodEntities is empty"));
@@ -360,7 +391,12 @@ class DataManagementFacadeImplTest {
         // make the assertion on the response
         var exception = assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(mediaEntity)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(mediaEntity)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
 
         verify(objectRetrievalQueueRepository, times(1)).saveAndFlush(any());
@@ -393,7 +429,12 @@ class DataManagementFacadeImplTest {
         // make the assertion on the response
         var exception = assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(mediaEntity)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(mediaEntity)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
 
         verify(objectRetrievalQueueRepository, times(0)).saveAndFlush(any());
@@ -401,7 +442,7 @@ class DataManagementFacadeImplTest {
     }
 
     @Test
-    void insertMediaEntityInObjectRetrievalQueueWhenNotFoundIn() throws Exception {
+    void insertMediaEntityInObjectRetrievalQueueWhenNotFoundIn() {
         final List<BlobContainerDownloadable> blobContainerDownloadables = new ArrayList<>();
         UserAccountEntity userAccount = new UserAccountEntity();
         userAccount.setId(1);
@@ -412,13 +453,7 @@ class DataManagementFacadeImplTest {
         mediaEntity.setCreatedBy(userAccount);
         mediaEntity.setLastModifiedBy(userAccount);
 
-        ObjectRetrievalQueueEntity objectRetrievalQueueEntity = new ObjectRetrievalQueueEntity();
-        objectRetrievalQueueEntity.setMedia(mediaEntity);
-        objectRetrievalQueueEntity.setCreatedBy(userAccount);
-        objectRetrievalQueueEntity.setLastModifiedBy(userAccount);
-        objectRetrievalQueueEntity.setParentObjectId(String.valueOf(mediaEntity.getId()));
-        objectRetrievalQueueEntity.setContentObjectId(mediaEntity.getContentObjectId());
-        objectRetrievalQueueEntity.setClipId(mediaEntity.getClipId());
+        ObjectRetrievalQueueEntity objectRetrievalQueueEntity = createObjectRetrievalQueueEntity(mediaEntity, userAccount);
 
         // execute the code
         final DataManagementFacadeImpl dmFacade = new DataManagementFacadeImpl(blobContainerDownloadables, externalObjectDirectoryRepository,
@@ -428,17 +463,70 @@ class DataManagementFacadeImplTest {
         // make the assertion on the response
         assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(mediaEntity)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(mediaEntity)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
 
         verify(objectRetrievalQueueRepository, times(1)).saveAndFlush(objectRetrievalQueueEntity);
     }
 
+    private static @NotNull ObjectRetrievalQueueEntity createObjectRetrievalQueueEntity(MediaEntity mediaEntity, UserAccountEntity userAccount) {
+        ObjectRetrievalQueueEntity objectRetrievalQueueEntity = new ObjectRetrievalQueueEntity();
+        objectRetrievalQueueEntity.setMedia(mediaEntity);
+        objectRetrievalQueueEntity.setCreatedBy(userAccount);
+        objectRetrievalQueueEntity.setLastModifiedBy(userAccount);
+        objectRetrievalQueueEntity.setParentObjectId(String.valueOf(mediaEntity.getId()));
+        objectRetrievalQueueEntity.setContentObjectId(mediaEntity.getContentObjectId());
+        objectRetrievalQueueEntity.setClipId(mediaEntity.getClipId());
+        return objectRetrievalQueueEntity;
+    }
+
     @Test
-    void insertTranscriptionEntityInObjectRetrievalQueueWhenNotFoundIn() throws Exception {
+    void insertTranscriptionEntityInObjectRetrievalQueueWhenNotFoundIn() {
         final List<BlobContainerDownloadable> blobContainerDownloadables = new ArrayList<>();
         UserAccountEntity userAccount = new UserAccountEntity();
         userAccount.setId(1);
+        TranscriptionDocumentEntity transcriptionDocumentEntity = createTranscriptionDocumentEntity(userAccount);
+
+        ObjectRetrievalQueueEntity objectRetrievalQueueEntity = getObjectRetrievalQueueEntity(transcriptionDocumentEntity,
+                                                                                              userAccount);
+
+        // execute the code
+        final DataManagementFacadeImpl dmFacade = new DataManagementFacadeImpl(blobContainerDownloadables, externalObjectDirectoryRepository,
+                                                                               objectRecordStatusRepository, storageOrderHelper, unstructuredDataHelper,
+                                                                               dataManagementConfiguration, armApiService, objectRetrievalQueueRepository);
+
+        // make the assertion on the response
+        assertThrows(
+            FileNotDownloadedException.class,
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(transcriptionDocumentEntity)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
+        );
+
+        verify(objectRetrievalQueueRepository, times(1)).saveAndFlush(objectRetrievalQueueEntity);
+    }
+
+    private static @NotNull ObjectRetrievalQueueEntity getObjectRetrievalQueueEntity(TranscriptionDocumentEntity transcriptionDocumentEntity,
+                                                                                     UserAccountEntity userAccount) {
+        ObjectRetrievalQueueEntity objectRetrievalQueueEntity = new ObjectRetrievalQueueEntity();
+        objectRetrievalQueueEntity.setTranscriptionDocument(transcriptionDocumentEntity);
+        objectRetrievalQueueEntity.setCreatedBy(userAccount);
+        objectRetrievalQueueEntity.setLastModifiedBy(userAccount);
+        objectRetrievalQueueEntity.setParentObjectId(String.valueOf(transcriptionDocumentEntity.getId()));
+        objectRetrievalQueueEntity.setContentObjectId(transcriptionDocumentEntity.getContentObjectId());
+        objectRetrievalQueueEntity.setClipId(transcriptionDocumentEntity.getClipId());
+        return objectRetrievalQueueEntity;
+    }
+
+    private static @NotNull TranscriptionDocumentEntity createTranscriptionDocumentEntity(UserAccountEntity userAccount) {
         TranscriptionEntity transcriptionEntity = new TranscriptionEntity();
         transcriptionEntity.setId(1);
         TranscriptionDocumentEntity transcriptionDocumentEntity = new TranscriptionDocumentEntity();
@@ -448,27 +536,7 @@ class DataManagementFacadeImplTest {
         transcriptionDocumentEntity.setClipId("clip-id");
         transcriptionDocumentEntity.setUploadedBy(userAccount);
         transcriptionDocumentEntity.setLastModifiedBy(userAccount);
-
-        ObjectRetrievalQueueEntity objectRetrievalQueueEntity = new ObjectRetrievalQueueEntity();
-        objectRetrievalQueueEntity.setTranscriptionDocument(transcriptionDocumentEntity);
-        objectRetrievalQueueEntity.setCreatedBy(userAccount);
-        objectRetrievalQueueEntity.setLastModifiedBy(userAccount);
-        objectRetrievalQueueEntity.setParentObjectId(String.valueOf(transcriptionDocumentEntity.getId()));
-        objectRetrievalQueueEntity.setContentObjectId(transcriptionDocumentEntity.getContentObjectId());
-        objectRetrievalQueueEntity.setClipId(transcriptionDocumentEntity.getClipId());
-
-        // execute the code
-        final DataManagementFacadeImpl dmFacade = new DataManagementFacadeImpl(blobContainerDownloadables, externalObjectDirectoryRepository,
-                                                                               objectRecordStatusRepository, storageOrderHelper, unstructuredDataHelper,
-                                                                               dataManagementConfiguration, armApiService, objectRetrievalQueueRepository);
-
-        // make the assertion on the response
-        assertThrows(
-            FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(transcriptionDocumentEntity)
-        );
-
-        verify(objectRetrievalQueueRepository, times(1)).saveAndFlush(objectRetrievalQueueEntity);
+        return transcriptionDocumentEntity;
     }
 
     @Test
@@ -489,7 +557,12 @@ class DataManagementFacadeImplTest {
 
         assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(mediaEntity)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(mediaEntity)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
     }
 
@@ -513,7 +586,12 @@ class DataManagementFacadeImplTest {
         // make the assertion on the response
         var exception = assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(transcriptionDocumentEntity)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(transcriptionDocumentEntity)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
 
         assertTrue(exception.getMessage().contains("No storedEodEntities found for transcriptionDocumentId"));
@@ -537,7 +615,12 @@ class DataManagementFacadeImplTest {
 
         assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(transcriptionDocumentEntity)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(transcriptionDocumentEntity)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
     }
 
@@ -557,7 +640,12 @@ class DataManagementFacadeImplTest {
         // make the assertion on the response
         var exception = assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(annotationDocumentEntity)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(annotationDocumentEntity)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
 
         assertTrue(exception.getMessage().contains("No storedEodEntities found for annotationDocumentId"));
@@ -581,16 +669,21 @@ class DataManagementFacadeImplTest {
 
         assertThrows(
             FileNotDownloadedException.class,
-            () -> dmFacade.retrieveFileFromStorage(annotationDocumentEntity)
+            () -> {
+                try (DownloadResponseMetaData downloadResponseMetaDataAutoClose = dmFacade.retrieveFileFromStorage(annotationDocumentEntity)) {
+                    // add for try close with resources
+                    log.info(DOWNLOAD_RESPONSE_META_DATA, downloadResponseMetaDataAutoClose);
+                }
+            }
         );
     }
 
     @Test
-    void testUnstructuredDataHelperCreate() throws Exception {
-        when(blobClientUploadResponseImpl.getBlobName()).thenReturn(UUID.randomUUID());
+    void testUnstructuredDataHelperCreate() {
+        when(blobClientUploadResponseImpl.getBlobName()).thenReturn(UUID.randomUUID().toString());
 
         when(dataManagementConfiguration.getUnstructuredContainerName()).thenReturn("unstructured");
-        when(dataManagementService.saveBlobData((String) any(), (InputStream) any())).thenReturn(blobClientUploadResponseImpl);
+        when(dataManagementService.saveBlobData(anyString(), (InputStream) any())).thenReturn(blobClientUploadResponseImpl);
 
         UnstructuredDataHelper unstructuredDataHelperTest = getUnstructuredDataHelper();
 
@@ -600,20 +693,17 @@ class DataManagementFacadeImplTest {
         ExternalObjectDirectoryEntity eodEntityToDelete = createEodEntity(unstructuredLocationEntity);
         eodEntityToDelete.setMedia(mediaEntity);
         BinaryData data = BinaryData.fromString("Test String");
-        String fileLocation = tempDirectory.getAbsolutePath();
-        File targetFile = new File(fileLocation, UUID.randomUUID().toString());
 
         boolean created = unstructuredDataHelperTest.createUnstructuredDataFromEod(
             eodEntityToDelete,
             eodEntity,
-            data.toStream(),
-            targetFile);
+            data.toStream());
 
         assertTrue(created);
     }
 
     @Test
-    void testUnstructuredDataHelperCreateFailed() throws Exception {
+    void testUnstructuredDataHelperCreateFailed() {
 
         UnstructuredDataHelper unstructuredDataHelperTest = getUnstructuredDataHelper();
 
@@ -623,14 +713,11 @@ class DataManagementFacadeImplTest {
         ExternalObjectDirectoryEntity eodEntityToDelete = createEodEntity(unstructuredLocationEntity);
         eodEntityToDelete.setMedia(mediaEntity);
         BinaryData data = BinaryData.fromString("Test String");
-        String fileLocation = tempDirectory.getAbsolutePath();
-        File targetFile = new File(fileLocation, UUID.randomUUID().toString());
 
         boolean created = unstructuredDataHelperTest.createUnstructuredDataFromEod(
             eodEntityToDelete,
             eodEntity,
-            data.toStream(),
-            targetFile);
+            data.toStream());
 
         assertFalse(created);
     }
@@ -658,6 +745,105 @@ class DataManagementFacadeImplTest {
 
         downloadResponseMetaData = dmFacade.retrieveFileFromStorage(mediaEntity);
         assertEquals(DatastoreContainerType.ARM, downloadResponseMetaData.getContainerTypeUsedToDownload());
+    }
+
+    @Test
+    void createCopyInUnstructuredDatastore_whenDeleteFileOnCompletionIsTrue_shouldDeleteFile() throws IOException {
+        ExternalObjectDirectoryEntity eodEntityToUpload = mock(ExternalObjectDirectoryEntity.class);
+        ExternalObjectDirectoryEntity eodEntityToDelete = mock(ExternalObjectDirectoryEntity.class);
+        File targetFile = Files.createTempFile("test", "txt").toFile();
+
+
+        final DataManagementFacadeImpl dmFacade = new DataManagementFacadeImpl(null, null,
+                                                                               null, null, unstructuredDataHelper,
+                                                                               null, null, null);
+
+        assertThat(targetFile).exists();
+        dmFacade.createCopyInUnstructuredDatastore(eodEntityToUpload, eodEntityToDelete, targetFile, true);
+
+        verify(unstructuredDataHelper).createUnstructuredDataFromEod(eq(eodEntityToDelete), eq(eodEntityToUpload), any(FileInputStream.class));
+        assertThat(targetFile).doesNotExist();
+    }
+
+    @Test
+    void createCopyInUnstructuredDatastore_whenDeleteFileOnCompletionIsFalse_shouldNotDeleteFile() throws IOException {
+        ExternalObjectDirectoryEntity eodEntityToUpload = mock(ExternalObjectDirectoryEntity.class);
+        ExternalObjectDirectoryEntity eodEntityToDelete = mock(ExternalObjectDirectoryEntity.class);
+        File targetFile = Files.createTempFile("test", "txt").toFile();
+
+
+        final DataManagementFacadeImpl dmFacade = new DataManagementFacadeImpl(null, null,
+                                                                               null, null, unstructuredDataHelper,
+                                                                               null, null, null);
+
+        assertThat(targetFile).exists();
+        dmFacade.createCopyInUnstructuredDatastore(eodEntityToUpload, eodEntityToDelete, targetFile, false);
+
+        verify(unstructuredDataHelper).createUnstructuredDataFromEod(eq(eodEntityToDelete), eq(eodEntityToUpload), any(FileInputStream.class));
+        assertThat(targetFile).exists();
+    }
+
+    @Test
+    //False positive as resources are mocked
+    @SuppressWarnings("PMD.CloseResource")
+    void processUnstructuredData_downloadResponseMetaDataIsFileBased_shouldNotCreateSecondTempFile() throws IOException {
+        DatastoreContainerType datastoreContainerType = DatastoreContainerType.ARM;
+        FileBasedDownloadResponseMetaData downloadResponseMetaData = mock(FileBasedDownloadResponseMetaData.class);
+        ExternalObjectDirectoryEntity eodEntityToUpload = mock(ExternalObjectDirectoryEntity.class);
+        ExternalObjectDirectoryEntity eodEntityToDelete = mock(ExternalObjectDirectoryEntity.class);
+
+        File targetFile = mock(File.class);
+        when(downloadResponseMetaData.getFileToBeDownloadedTo()).thenReturn(targetFile);
+
+
+        final DataManagementFacadeImpl dmFacade = spy(new DataManagementFacadeImpl(null, null,
+                                                                                   null, null, null,
+                                                                                   null, null, null));
+
+        doNothing().when(dmFacade).createCopyInUnstructuredDatastore(any(), any(), any(), anyBoolean());
+
+        dmFacade
+            .processUnstructuredData(datastoreContainerType, downloadResponseMetaData, eodEntityToUpload, eodEntityToDelete);
+
+        verify(downloadResponseMetaData).getFileToBeDownloadedTo();
+        verify(dmFacade).createCopyInUnstructuredDatastore(eodEntityToUpload, eodEntityToDelete, targetFile, false);
+    }
+
+    @Test
+    //False positive as resources are mocked
+    @SuppressWarnings("PMD.CloseResource")
+    void processUnstructuredData_downloadResponseMetaDataIsNotFileBased_shouldCreateTempFile() throws IOException {
+        DatastoreContainerType datastoreContainerType = DatastoreContainerType.ARM;
+        DownloadResponseMetaData downloadResponseMetaData = mock(DownloadResponseMetaData.class);
+        ExternalObjectDirectoryEntity eodEntityToUpload = mock(ExternalObjectDirectoryEntity.class);
+        ExternalObjectDirectoryEntity eodEntityToDelete = mock(ExternalObjectDirectoryEntity.class);
+
+        Resource resource = mock(Resource.class);
+        when(downloadResponseMetaData.getResource()).thenReturn(resource);
+
+        InputStream stream = new ByteArrayInputStream("Test String".getBytes(UTF_8));
+        when(resource.getInputStream()).thenReturn(stream);
+
+        DataManagementConfiguration dataManagementConfiguration = mock(DataManagementConfiguration.class);
+        when(dataManagementConfiguration.getTempBlobWorkspace()).thenReturn(SOME_TEMP_WORKSPACE);
+        final DataManagementFacadeImpl dmFacade = spy(new DataManagementFacadeImpl(null, null,
+                                                                                   null, null, null,
+                                                                                   dataManagementConfiguration, null, null));
+
+        doNothing().when(dmFacade).createCopyInUnstructuredDatastore(any(), any(), any(), anyBoolean());
+
+        dmFacade
+            .processUnstructuredData(datastoreContainerType, downloadResponseMetaData, eodEntityToUpload, eodEntityToDelete);
+
+        ArgumentCaptor<File> targetFileArgumentCaptor = ArgumentCaptor.forClass(File.class);
+
+        verify(dataManagementConfiguration).getTempBlobWorkspace();
+        verify(downloadResponseMetaData).getResource();
+        verify(resource).getInputStream();
+        verify(dmFacade).createCopyInUnstructuredDatastore(eq(eodEntityToUpload), eq(eodEntityToDelete), targetFileArgumentCaptor.capture(), eq(true));
+
+        File targetFileActual = targetFileArgumentCaptor.getValue();
+        assertThat(targetFileActual.getAbsolutePath()).matches(".*/" + SOME_TEMP_WORKSPACE + "/[0-9a-f]{8}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{4}-[0-9a-f]{12}");
     }
 
     @NotNull
