@@ -28,11 +28,11 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Random;
 import java.util.Set;
+import java.util.UUID;
 
 import static java.time.OffsetDateTime.now;
 import static java.util.Collections.emptyList;
 import static java.util.Optional.empty;
-import static java.util.UUID.randomUUID;
 import static java.util.stream.Collectors.toList;
 import static java.util.stream.IntStream.rangeClosed;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -183,7 +183,7 @@ class TranscriptionDownloaderTest {
             .thenReturn(List.of(new TranscriptionDocumentEntity()));
 
         var transcriptionDocuments = someTranscriptionDocumentsUploadedAtLeast2DaysAgo(1);
-        transcriptionDocuments.get(0).setHidden(true);
+        transcriptionDocuments.getFirst().setHidden(true);
 
         var transcription = someTranscriptionWith(transcriptionDocuments);
         when(transcriptionRepository.findById(transcription.getId())).thenReturn(Optional.of(transcription));
@@ -201,7 +201,7 @@ class TranscriptionDownloaderTest {
         when(userIdentity.userHasGlobalAccess(Set.of(SUPER_ADMIN))).thenReturn(true);
 
         var transcriptionDocuments = someTranscriptionDocumentsUploadedAtLeast2DaysAgo(1);
-        var transcriptionDocument = transcriptionDocuments.get(0);
+        var transcriptionDocument = transcriptionDocuments.getFirst();
         transcriptionDocument.setHidden(true);
 
         var transcription = someTranscriptionWith(transcriptionDocuments);
@@ -247,14 +247,14 @@ class TranscriptionDownloaderTest {
     private List<ExternalObjectDirectoryEntity> someExternalObjectDirectoriesCreatedAtLeast2DaysAgo(int quantity) {
         return rangeClosed(1, quantity).boxed()
             .map(i -> someExternalObjectDirectoryWithCreationDate(now().minusDays(2).minusDays(i)))
-            .collect(toList());
+            .toList();
     }
 
     private ExternalObjectDirectoryEntity someExternalObjectDirectoryWithCreationDate(OffsetDateTime createdDateTime) {
         var externalObjectDirectory = new ExternalObjectDirectoryEntity();
         externalObjectDirectory.setId(random.nextInt());
         externalObjectDirectory.setCreatedDateTime(createdDateTime);
-        externalObjectDirectory.setExternalLocation(randomUUID());
+        externalObjectDirectory.setExternalLocation(UUID.randomUUID().toString());
         externalObjectDirectory.setExternalLocationType(someExternalLocation());
         return externalObjectDirectory;
     }
